# capnp-tester

client/: Cargo.toml  client.rs  hello_world.capnp  main.rs
client/capnp-rpc/: Cargo.toml
client/capnp-rpc/src/: rpc.rs  rpc_capnp.rs  rpc_twoparty_capnp.rs  task_set.rs
server/: requirements.txt  server.py
