[package]

name = "client"
version = "0.0.0"
authors = [ "Andre Cruz <andre@cabine.org>"  ]
edition = "2021"

build = "build.rs"

[[bin]]
name = "client"
path = "main.rs"

[build-dependencies]
capnpc = "0.15"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
capnp = "0.15"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros", "time"]}
tokio-util = { version = "0.6.0", features = ["compat"] }
capnp-rpc = { path = "capnp-rpc" }
